# beil

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: cli.rs  main.rs
src/cmd/: diff.rs  info.rs  list.rs  mod.rs
src/cmd/info/: data.rs  mod.rs
src/cmd/list/: data.rs  mod.rs
src/data/: dependency.rs  difference.rs  export.rs  import.rs  info.rs  mod.rs
src/output/: mod.rs  plain.rs
