[package]
authors = ["Matthias Stangl <matthias.stangl95@gmail.com>"]
description = "Beil, a binary export import tool."
edition = "2021"
exclude = [".github", ".vscode"]
keywords = ["beil", "export", "import", "abi", "dependency"]
license = "MIT"
name = "beil"
readme = "README.md"
repository = "https://github.com/mtzstngl/beil"
version = "0.2.0"

[dependencies]
bitflags = "1.3.2"
clap = { version = "3.1.6", features = ["derive"] }
object = "0.28.3"
symbolic = { version = "8.6.1", default-features = false, features = ["demangle"] }
uuid = "0.8.2"
