[package]
authors = ["Matthias Stangl <matthias.stangl95@gmail.com>"]
description = "Beil, a binary export import tool."
edition = "2021"
exclude = [".github", ".vscode"]
keywords = ["beil", "export", "import", "abi", "dependency"]
license = "MIT"
name = "beil"
readme = "README.md"
repository = "https://github.com/mtzstngl/beil"
version = "0.2.0"

[dependencies]
bitflags = "1.3.2"
clap = { version = "4.0.26", features = ["derive"] }
object = "0.30.0"
symbolic = { version = "10.1.4", default-features = false, features = ["demangle"] }
uuid = "1.2.2"
