[package]
authors = ["Matthias Stangl <matthias.stangl95@gmail.com>"]
description = "Beil, a binary export import tool."
edition = "2021"
exclude = [".github", ".vscode"]
keywords = ["beil", "export", "import", "abi", "dependency"]
license = "MIT"
name = "beil"
readme = "README.md"
repository = "https://github.com/mtzstngl/beil"
version = "0.2.0"

[dependencies]
bitflags = "2.4.1"
clap = { version = "4.4.6", features = ["derive"] }
object = "0.32.1"
symbolic = { version = "12.4.1", default-features = false, features = ["demangle"] }
uuid = "1.5.0"
